--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,3 +7,36 @@ thead, tbody, tfoot, tr, td, th {
 table.dataTable.no-footer{
     border-color: #e9ecef !important;
 }
+
+.select2-container--default .select2-selection--single {
+
+    display: block !important;
+    width: 100% !important;
+    padding: 0.5rem 0.75rem !important;
+    font-size: 0.875rem !important;
+    font-weight: 400 !important;
+    line-height: 1.4rem !important;
+    color: #495057;
+    background-color: #fff !important;
+    background-clip: padding-box !important;
+    border: 1px solid #d2d6da !important;
+    appearance: none !important;
+    border-radius: 0.5rem !important;
+    transition: box-shadow 0.15s ease, border-color 0.15s ease !important;
+}
+
+.select2-container .select2-selection--single {
+    height: auto !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 10px !important;
+    right: 10px !important;
+}
+
+font-weight: normal;
+    display: block;
+    white-space-collapse: collapse;
+    text-wrap: nowrap;
+    min-height: 1.2em;
+    padding: 0px 2px 1px;
